--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": [
@@ -22,8 +21,11 @@
     "jsx": "react-jsx"
   },
   "paths": {
+    "@": [
+      "./src"
+    ],
     "@/*": [
-      "src/*"
+      "./src/*"
     ]
   },
   "include": [
