--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,15 +18,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
-  },
-  "paths": {
-    "@": [
-      "./src"
-    ],
-    "@/*": [
-      "./src/*"
-    ]
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    }
   },
   "include": [
     "src/*.ts",
